RayshawnP1/demonstrationdeploy/metadata/unpackaged/unpackaged/objects/Shop_Duty__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check if this is an active routinely scheduled activity. Uncheck if no longer used.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the duty</description>
        <inlineHelpText>a short description of the duty requirements</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration_Interval__c</fullName>
        <description>How long to complete the activity each time.</description>
        <inlineHelpText>For how long to complete the activity each time.</inlineHelpText>
        <label>How Long To Do It Each Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Time_Unit__c</fullName>
        <description>How long to complete the activity each time.</description>
        <inlineHelpText>How long will the activity take to complete?</inlineHelpText>
        <label>Duration Time Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duty_Days__c</fullName>
        <defaultValue>&apos;Monday;Tuesday;Wednesday;Thursday;Friday;Saturday;Sunday&apos;</defaultValue>
        <description>Days that the duty needs to be completed</description>
        <label>Duty Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                    <default>true</default>
                    <label>Tuesday</label>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>How many times does the task need to be performed each time?</description>
        <inlineHelpText>How many times does the task need to be performed each time (e.g. 1 x)?</inlineHelpText>
        <label>Number of Times To Do It Each Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Interval_Before_Repeat__c</fullName>
        <description>How much time before duty needs to be repeated?</description>
        <inlineHelpText>How much time between tasks before it needs to repeat? (example, every 30 Min)</inlineHelpText>
        <label>Time Interval Before Repeat</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Interval_Units__c</fullName>
        <description>Interval Unit of Time</description>
        <inlineHelpText>How long before the task has to be repeated (example, every 30 minutes, every hour)</inlineHelpText>
        <label>Time Interval Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Shop Duty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Duty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shop Duties</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>